--- a/scripts/Packages/Package_NoLead__DFN_QFN_LGA_SON/size_definitions/qfn/vqfn.yaml
+++ b/scripts/Packages/Package_NoLead__DFN_QFN_LGA_SON/size_definitions/qfn/vqfn.yaml
@@ -565,14 +565,8 @@ VQFN-32-1EP_5x5mm_P0.5mm_EP3.15x3.15mm:
   device_type: 'VQFN'
   size_source: 'https://www.ti.com/lit/ds/slvs589d/slvs589d.pdf#page=33'
   ipc_class: 'qfn'
-  body_size_x:
-    minimum: 4.85
-    nominal: 5
-    maximum: 5.15
-  body_size_y:
-    minimum: 4.85
-    nominal: 5
-    maximum: 5.15
+  body_size_x: 5.0 +/- 0.15
+  body_size_y: 5.0 +/- 0.15
   overall_height:
     minimum: 0.8
     maximum: 1
